igm/ing-daisingress.yml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: daisingress
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
    #appgw.ingress.kubernetes.io/override-frontend-port: "8080"
    appgw.ingress.kubernetes.io/backend-path-prefix: "/"
    #appgw.ingress.kubernetes.io/backend-hostname
    #appgw.ingress.kubernetes.io/backend-protocol
    appgw.ingress.kubernetes.io/ssl-redirect: "true"
    appgw.ingress.kubernetes.io/appgw-ssl-certificate: dais-prod
    #appgw.ingress.kubernetes.io/appgw-trusted-root-certificate
    #appgw.ingress.kubernetes.io/connection-draining
    #appgw.ingress.kubernetes.io/connection-draining-timeout
    #appgw.ingress.kubernetes.io/cookie-based-affinity
    #appgw.ingress.kubernetes.io/request-timeout
    appgw.ingress.kubernetes.io/use-private-ip: "true"
    appgw.ingress.kubernetes.io/waf-policy-for-path: /subscriptions/fa4702cd-90d8-4bd5-af87-efacebcec735/resourceGroups/rg-az01-po-com-aks001/providers/Microsoft.Network/applicationGatewayWebApplicationFirewallPolicies/waf-dais-prod
    #appgw.ingress.kubernetes.io/health-probe-hostname
    #appgw.ingress.kubernetes.io/health-probe-port
    #appgw.ingress.kubernetes.io/health-probe-path
    #appgw.ingress.kubernetes.io/health-probe-status-codes
    #appgw.ingress.kubernetes.io/health-probe-interval
    #appgw.ingress.kubernetes.io/health-probe-timeout
    #appgw.ingress.kubernetes.io/health-probe-unhealthy-threshold
spec:
  rules:
    - host: dais.industry.gov.au
      http:
        paths:
          - path: /data/*
            backend:
              serviceName: dais-project-db
              servicePort: 8000
          - path: /auth/*
            backend:
              serviceName: auth-service
              servicePort: 8000
          - path: /data2/*
            backend:
              serviceName: dais-core-db
              servicePort: 8000
          - path: /project-gateway/*
            backend:
              serviceName: project-gateway
              servicePort: 8000
          - path: /upload/*
            backend:
              serviceName: upload-service
              servicePort: 8000
          - path: /backend/*
            backend:
              serviceName: modular-frontend-store
              servicePort: 8000
          - path: /
            backend:
              serviceName: website
              servicePort: 8000
